# util_libs

./: .cmake-format.yaml  CMakeLists.txt
.github/workflows/: sel4test-hw.yml  sel4test-sim.yml
libethdrivers/: CMakeLists.txt
libplatsupport/: CMakeLists.txt
libplatsupport/include/platsupport/: serial.h
libplatsupport/plat_include/hobgoblin/platsupport/plat/: serial.h
libplatsupport/src/: serial.c
libplatsupport/src/drivers/uart_bcm_27xx_28xx/: uart_bcm.c
libplatsupport/src/drivers/uart_pl011/: uart_pl011.c
libplatsupport/src/mach/exynos/: serial.c
libplatsupport/src/mach/imx/serial/: serial.c
libplatsupport/src/mach/nvidia/: serial.c
libplatsupport/src/mach/zynq/: serial.c
libplatsupport/src/plat/am335x/: serial.c
libplatsupport/src/plat/apq8064/: serial.c
libplatsupport/src/plat/fvp/: serial.c
libplatsupport/src/plat/hifive/: uart.c
libplatsupport/src/plat/hikey/: serial.c
libplatsupport/src/plat/hobgoblin/: chardev.c  serial.c
libplatsupport/src/plat/imx31/: serial.c
libplatsupport/src/plat/odroidc2/: serial.c
libplatsupport/src/plat/omap3/: serial.c
libplatsupport/src/plat/pc99/: serial.c
libplatsupport/src/plat/rockpro64/: serial.c
libutils/arch_include/acme/utils/arch/: stack.h  ud.h
libutils/include/utils/: assume.h
libutils/src/: zf_log.c
